final_task add switch for driver

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -13,3 +13,8 @@ zip=00000
 phone=3755566
 alias=Patric
 wishlistname=clothes
+URL=http://automationpractice.com/
+gridhost=localhost
+gridport=4444
+saucename=siarheikost
+saucekey=28413c41-f1b9-47ed-863c-698a77626b32
