final_task new corrected

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,8 +2,8 @@ username=siarheikost
 password=3edcvfr4#EDCVFR$
 browser=chrome
 timeout=15
-firstname=Bill
-lastname=Billi
+firstname=Bob
+lastname=Bobbi
 email=seregeikss@yandex.by
 email2=siarheikost@yandex.by
 company=issoft
