final_task new corrected

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -19,3 +19,7 @@ gridport=4444
 saucename=siarheikost
 saucekey=28413c41-f1b9-47ed-863c-698a77626b32
 drivername=local
+item1=Faded Short Sleeve T-shirts
+item2=Blouse
+item3=Printed Dress
+state=Hawaii
